syntax = "proto3";

package com.dev.grpc;

option java_multiple_files = true;
//option java_outer_classname = "Document_proto";
option java_package = "com.dev.grpc.document";

message Document {
  User user = 1;
  repeated Post posts = 2;
  Settings settings = 3;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  Address address = 4;
  int32 age = 5;
  string dateOfBirth = 6;
  string createdAt = 7;
}
message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  int32 zip = 4;
  Location location = 5;
}
message Location {
  double lat = 1;
  double lon = 2;
}
message Post {
  string postId = 1;
  string title = 2;
  string content = 3;
  repeated string tags = 4;
  repeated Comment comments = 5;
  string createdAt = 6;
}
message Comment {
  string commentId = 1;
  string userId = 2;
  string comment = 3;
  string createdAt = 4;
}
message Settings {
  string theme = 1;
  Notification notifications = 2;
  Privacy privacy = 3;
}
message Notification {
  string email = 1;
  string sms = 2;
  string push = 3;
}
message Privacy {
  string profileVisibility = 1;
  string searchVisibility = 2;
}
message DocumentRequest {
  string documentId = 1;
}
message DocumentsResponse {
  repeated Document documents = 1;
  int32 count = 2;
}
message Empty {}

message DocumentSearchRequest {
  string userId = 1;
  string userName = 2;
  string userEmail = 3;
  int32 userAge = 4;
  string userDateOfBirth = 5;
  repeated string postTags = 6;
  string profileTheme = 7;
  string profileVisibility = 8;
  string searchVisibility = 9;
  string userState = 10;
  int32 userZipCode = 11;
  string userCity = 12;
}

// Define services to operate on the messages
service DocumentService {
  rpc CreateDocument (Document) returns (Document);
  rpc GetDocument (DocumentRequest) returns (Document);
  rpc GetAllDocuments (Empty) returns (DocumentsResponse);
  rpc UpdateDocument (Document) returns (Document);
  rpc DeleteDocument (DocumentRequest) returns (Empty);
  rpc GetDocumentsByQueries(DocumentSearchRequest) returns (DocumentsResponse);
}
